# prefers-color-scheme

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
example/: Cargo.toml  index.html
example/src/: main.rs
lib/: Cargo.toml  webdriver.json
lib/src/: lib.rs
